fix: align status panel icons

--- a/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
+++ b/ui/src/app/applications/components/application-status-panel/application-status-panel.scss
@@ -84,6 +84,10 @@
             @include responsive-widths();
         }
 
+        &:first-child {
+            margin-top: 7px;
+        }
+
         &:not(:first-child) {
             border-left: 1px solid $argo-color-gray-3;
         }
@@ -173,7 +177,6 @@
     }
     &__item-name,
     &__item-value {
-        margin-top: auto;
         overflow: hidden;
         text-overflow: ellipsis;
     }
